--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "PW2 - Node com express e handlebars",
   "main": "index.js",
   "scripts": {
-    "serve": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "serve": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": "https://github.com/FilipeSS01/ProjetoExpressHandlebars.git",
   "author": "Filipe <filipess671@gmail.com>",
